# OOP_lab3

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: Figure.h  FigureArray.h  Octagon.h  Point.h  Square.h  Triangle.h
src/: FigureArray.cpp  Octagon.cpp  Square.cpp  Triangle.cpp  main.cpp
tests/: test_array.cpp  test_octagon.cpp  test_square.cpp  test_triangle.cpp
